[project]
name = "AiMetrix"
version = "0.0.1"
authors = [
  { name="Zoya Jamadar", email="zoyajmd@gmail.com" },
]
description = "A package to calculate the metrics of a given dataset"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://deepintoai.netlify.app"